<resources>
    <string name="app_name">BWA MOV</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="ilustrasi">ilustrasi</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="selamat_datang">Selamat Datang,\nEko Teguh Wicaksono</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="photo">Photo</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">BELI TIKET</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">BATALKAN</string>
    <string name="when">When</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_ballance">Total Ballance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">SIMPAN DATA BARU</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="masuk">MASUK</string>
</resources>
